<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">hello fragment</string>
    <string name="text_view">TextView</string>
    <string name="todo">TODO</string>
    <string name="PAID">PAGO</string>
    <string name="back_button">back button</string>
    <string name="options_button">options button</string>
    <string name="card_logo_description">Card logo</string>
    <string name="card_label_cnpj">CNPJ:</string>
    <string name="card_cnpj_example" tools:ignore="TypographyDashes">99.9999.999.0001-99</string>
    <string name="card_textBody_example">Hello Storybook</string>
    <string name="card_value_example">500,00</string>
    <string name="card_label_money_symbol">R$</string>
    <string name="card_description_email_icon">Email icon</string>
    <string name="card_description_user_icon">User icon</string>
    <string name="card_due_date_example">14 SET</string>
    <string name="bcard_inativo">Inativo</string>
    <string name="bcard_ativo">Ativo</string>
    <string name="receipt_comprovante">COMPROVANTE</string>
    <string name="receipt_cedente">Cedente</string>
    <string name="receipt_cnpj">CNPJ</string>
    <string name="receipt_pagador">Pagador</string>
    <string name="receipt_codigo_de_barras">Código de Barras</string>
    <string name="receipt_data_de_vencimento">Data de Vencimento:</string>
    <string name="receipt_data_do_pagamento">Data do Pagamento:</string>
    <string name="receipt_valor_do_documento">Valor do Documento:</string>
    <string name="receipt_descontos">Descontos:</string>
    <string name="receipt_juros">Juros:</string>
    <string name="receipt_multa">Multa:</string>
    <string name="receipt_valor_cobrado">Valor Cobrado:</string>
    <string name="receipt_codigo_de_autenticacao">Código de Autenticação:</string>
    <string name="receipt_compartilhar_comprovante">Compartilhar Comprovante</string>
    <string name="paid_details_ver_comprovante">Ver Comprovante</string>
    <string name="paid_details_vencimento">Vencimento</string>
    <string name="paid_details_value">Valor</string>
    <string name="paid_details_cerj">CERJ</string>
    <string name="paid_details_screen_image">Screen Image</string>
    <string name="filter_ordenar_por">Ordenar por:</string>
    <string name="filter_a_z">A-Z |</string>
    <string name="filter_z_a">Z-A |</string>
    <string name="filter_search_button">search button</string>
    <string name="filter_search_filter">Search Filter</string>
    <string name="account_company_name">Company Name</string>
    <string name="account_cnpj">CNPJ:</string>
    <string name="account_mes_ano">Mes Ano</string>
    <string name="account_valor">Valor:</string>
    <string name="account_pagamento_minimo">Pagamento Mínimo:</string>
    <string name="account_vencimento">Vencimento:</string>
    <string name="account_codigo_de_barras">Código de Barras:</string>
    <string name="account_codigo_barras_exemplo">000000.000000.000000.00000000</string>
    <string name="account_pdf_da_conta">PDF da conta</string>
    <string name="account_recusar_a_conta">Recusar a conta</string>
    <string name="account_aceitar_a_conta">Aceitar a conta</string>
    <string name="account_historico_de_pagamentos">HISTÓRICO DE PAGAMENTOS</string>
    <string name="account_resumo_das_faturas_anteriores">Resumo das Faturas Anteriores</string>
    <string name="beneficiaryDetails_limite_de_autorizacao">Limite de Autorização:</string>
    <string name="beneficiaryDetails_pagamento_automatico">Pagamento Automático:</string>
    <string name="beneficiaryDetails_cartao">Cartão ********</string>
    <string name="beneficiaryDetails_cnpj">CNPJ:</string>
    <string name="beneficiaryDetails_company_name">Company Name</string>
    <string name="beneficiary_details_acessar_cartao">Acessar cartão</string>
    <string name="beneficiary_details_ver_detalhes_do_beneficiario">Ver detalhes do beneficiário</string>
    <string name="payment_details_confirmar_agendamento">Confirmar Agendamento</string>
    <string name="payment_details_confirmar_pagamento">Confirmar Pagamento</string>
    <string name="payment_details_banco">Banco</string>
    <string name="payment_details_beneficiario">Beneficiário</string>
    <string name="payment_details_pagamento">PAGAMENTO</string>
    <string name="payment_details_pagador">Pagador</string>
    <string name="payment_details_codigo_de_barras">Código de Barras</string>
    <string name="payment_details_valor">Valor</string>
    <string name="payment_details_pagar_com">Pagar com</string>
    <string name="payment_details_saldo_disponivel_apos_pagamento">Saldo disponível após pagamento</string>
    <string name="payment_details_vencimento">Vencimento</string>
    <string name="payment_details_agendado_para">Agendado para</string>
    <string name="account_ver_detalhes_da_conta">Ver detalhes da conta</string>
    <string name="beneficiaryDetails_cartaoLabel">Cartão</string>
</resources>