<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".filter_searches.FilterSearchesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/filterTvLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/filter_ordenar_por"
            android:textColor="@color/superdda_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/filterBtnAsc"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:background="#00FFFFFF"
            android:text="@string/filter_a_z"
            android:textColor="@color/superdda_text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/filterTvLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/filterBtnDesc"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:background="#00FFFFFF"
            android:text="@string/filter_z_a"
            android:textColor="@color/superdda_text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/filterBtnAsc"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/filterBtnSearch"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/filter_search_button"
            android:src="@drawable/ic_search_icon_selector"
            app:layout_constraintStart_toEndOf="@+id/filterBtnDesc"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/filterEtValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/filter_search_filter"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/filterBtnSearch"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>