<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/beneficiaryCardFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card"
    tools:context=".cards.beneficiary.BeneficiaryCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/beneficiaryCardTvCnpjLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/card_label_cnpj"
            android:textColor="@color/card_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardIvLogo" />

        <TextView
            android:id="@+id/beneficiaryCardTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:minWidth="10dp"
            android:minHeight="19dp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@+id/beneficiaryCardIvLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="wrap"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/beneficiaryCardTvCnpjValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/card_cnpj_example"
            android:textColor="@color/card_text"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/beneficiaryCardTvCnpjLabel"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardIvLogo" />

        <TextView
            android:id="@+id/beneficiaryCardTvLimitValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:minWidth="10dp"
            android:textColor="@color/card_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardTvText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/beneficiaryCardTvLimitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="16dp"
            android:text="@string/card_value_example"
            android:textColor="@color/card_text2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/beneficiaryCardTvMoneySymbol"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardTvText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/beneficiaryCardTvMoneySymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="16dp"
            android:text="@string/card_label_money_symbol"
            android:textColor="@color/card_text2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/beneficiaryCardTvLimitValueText"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardTvText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/beneficiaryCardTvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:minWidth="10dp"
            android:textColor="@color/card_text2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toEndOf="@+id/beneficiaryCardTvTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/beneficiaryCardIvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_logo_description"
            android:filterTouchesWhenObscured="false"
            android:foregroundGravity="fill"
            android:minWidth="10dp"
            android:minHeight="19dp"
            android:overScrollMode="never"
            android:scaleType="fitStart"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="wrap"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/beneficiaryCardTvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:minWidth="50dp"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardTvCnpjLabel" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/beneficiaryCardActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:textOff="@string/bcard_inativo"
            android:textOn="@string/bcard_ativo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/beneficiaryCardTvLimitValue"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryCardTvType"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>